# MiraiCP-core-demo

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cppBuildTests.yml
MiraiCP/: MiraiCP.hpp  core.h
MiraiCP/3rd_includes/utf8/: utf8.h
